# prg-contact-dataloaders

./: .gitignore  README.md  pyproject.toml  requirements.txt
prg_contact/: __init__.py
prg_contact/datasets/: __init__.py  base.py  ego4d.py  hoi4d.py  visor.py
prg_contact/masks/: __init__.py  polygon.py
prg_contact/parsing/: __init__.py  ego4d_parser.py  hoi4d_parser.py  visor_parser.py
prg_contact/splits/: __init__.py
scripts/: verify_ego4d.py  verify_hoi4d.py  verify_visor.py
tests/: test_shapes.py
